# soc-phishing-triage-env

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  gradio_demo.py  inference.py  models.py  openenv.yaml  pyproject.toml  stress_test.py  train.py
data/: build_incidents.py  phishing_emails.json  seed_sysmon_logs.py  sysmon_logs.json  threat_intel_db.json  triage_scenarios.db
server/: Dockerfile  __init__.py  app.py  environment.py  grader.py  requirements.txt  tools.py
tests/: multi_model_test.py  test_grader.py  test_phase5.py  test_server.py
tests/results/: TESTING_REPORT.md
